# SVM-MusicNotation

./: .gitignore  README.md  antialiased_generator.py  fornes_generator.py  homus_generator.py  model.pkl  model_merger.ipynb  pyproject.toml  svm_classifier.py
classifier/: svm_classifier.py  svm_preprocessor.py
