[tool.poetry]
name = "svm-musicnotation"
version = "0.1.0"
description = ""
authors = ["Wojciech Gruszka <wojciech@gruszka.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
opencv-python = "^4.4.0"
Pillow = "^8.0.1"
mahotas = "^1.4.11"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
